Optimize table-building scripts.

--- a/app/prodverse/static/prodverse/html/Kinpak, Inc/Production - Web Parts/oilschedule.html
+++ b/app/prodverse/static/prodverse/html/Kinpak, Inc/Production - Web Parts/oilschedule.html
@@ -2536,7 +2536,7 @@ x:publishsource="Excel">
   <td class=xl14932385 width=832 style='width:624pt'>Line 6 (Tk Slr, 10oz Tube,
   &amp; Grease<span style='mso-spacerun:yes'>  </span>Lines)</td>
   <td class=xl11832385 width=0></td>
-  <td class=xl14432385 width=98 style='width:74pt'>1/19/23</td>
+  <td class=xl14432385 width=98 style='width:74pt'>1/23/23</td>
   <td class=xl1532385 width=79 style='width:59pt'></td>
  </tr>
  <tr height=24 style='mso-height-source:userset;height:18.0pt'>
@@ -3030,8 +3030,8 @@ x:publishsource="Excel">
   <td class=xl6632385 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl7632385 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl7732385 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl14732385 style='border-top:none;border-left:none'>1200 cans need
-  to be labeled with 96832A1</td>
+  <td class=xl14532385 style='border-top:none;border-left:none'>1200 cans
+  labeled with 96832A1</td>
   <td class=xl16032385 style='border-top:none'>&nbsp;</td>
   <td class=xl6932385 style='border-top:none;border-left:none'>&nbsp;</td>
   <td class=xl8832385 style='border-top:none;border-left:none'>&nbsp;</td>
@@ -3635,6 +3635,45 @@ x:publishsource="Excel">
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
